--- a/index.html
+++ b/index.html
@@ -183,13 +183,13 @@
                         <td class="h6 px-1 py-1">XX</td>
                       </tr>
                       <tr>
-                        <th class="px-0 py-1" scope="row">Tapau Ciao Sdn Bhd 
+                        <th class="px-0 py-1" scope="row">Tapau & Ciao Sdn Bhd 
                    <span class="text-primary-2"><br></br></span>
                         </th>
                         <td class="h6 px-1 py-1">XX</td>
                       </tr>
                       <tr>
-                        <th class="px-0 py-1" scope="row">Durian MK Sdn Bhd
+                        <th class="px-0 py-1" scope="row">Good Durian Sdn Bhd
                    <span class="text-primary-2"><br></br></span>
                         </th>
                         <td class="h6 px-1 py-1">XX</td>
