--- a/Guidance.html
+++ b/Guidance.html
@@ -294,7 +294,7 @@
       <div class="container py-4 ">
         <div class="row  justify-content-center ">
           <div class="col-11 mb-3 text-light">
-            <h3 class="h3">Journey in The Sandbox </h3>
+            <h3 class="h3" style="text-align: center;">Journey in The Sandbox </h3>
             <p style="color: yellow;">[to include pics for each placeholder]</p>
           </div>
 
