--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                   <div class="card bg-primary-alt">
                     <div class="card-body d-flex flex-column ">
                       <div class="d-flex justify-content:between">
-                      <h4>Applications by sector <p style="color: crimson;">[suggest to make this part an interactive pie chart]</p></h4>
+                      <h4>Applications by sector <p style="color: crimson;">[suggest to make this an interactive pie chart]</p></h4>
                       </div>
                       <div class="column" style="text-align: right;">Total</div>
                       <table class="table text-small ">
