--- a/index.html
+++ b/index.html
@@ -342,6 +342,21 @@
       <div class="arrows-inside highlight-selected mb-0 mx-1 flickity-enabled is-draggable" data-flickity="{ &quot;autoPlay&quot;: true, &quot;imagesLoaded&quot;: true, &quot;wrapAround&quot;: true }" tabindex="0">
    
           
+<!--CAROUSELL-->
+      <div class="carousel-cell col-lg-2 col-md-3 col-sm-6 col-6 py-10">
+			<div class="card card-body d-flex flex-column">
+              <a href="#" class="hover-arrow">
+              <h4><br>Earlier Highlights</h4></a><br>
+            </div>
+          </div>
+          <div class="carousel-cell col-lg-2 col-md-3 col-sm-6 col-6 py-10">
+            <div class="card card-body d-flex flex-column">
+                    <a href="#" class="hover-arrow">
+                    <h4><br>test</h4></a><br>
+                  </div>
+                </div>
+<!--END OF CAROUSELL-->
+
      <div class="flickity-viewport" style="height: 332px; touch-action: pan-y;"><div class="flickity-slider" style="left: 0px; transform: translate3d(14.05%, 0px, 0px);"><div class="carousel-cell col-lg-3 col-md-3 col-sm-6 col-7 p-0" style="position: absolute; left: 0%;" aria-hidden="true">
 			<div class="card card-body d-flex flex-column bg-primary-alt">
               <div class="d-flex justify-content-between mb-3">
