--- a/Guidance.html
+++ b/Guidance.html
@@ -105,86 +105,31 @@
 <!-- MAIN BODY -->
 
 
-
-<section class="bg-primary-alt py-5">
+<section class="bg-primary-alt py-10">
       <div class="container">
         <div class="row justify-content-center text-center">
           <div class="row">
             <h2 class="mx-lg-8">Overview of Sandbox Application Process</h2>
-            <p style="color: red;">[to fix animation on this section]</p>
+            <p style="color: red;">[to fix this section]</p>
           </div>
         </div>
       </div>
-      <br>
+      <br></br>
       <!-- partial:index.partial.html -->
-<div class="timeline-wrapper clearfix">
-  <div class="timeline-content-day">
-      <div class="timeline-line"></div>
-      <div class="timeline-content-item active" data-timeline="hour-8">
-          <span>Pre-application</span>
-          <div class="timeline-content-item-reveal">
-              <a href="#">
-                  <img src="https://picsum.photos/g/300/300">
-                  <span>
-                    <div><ul>
-                    <li>Finalise the business model</li> 
-                    <li>Go through the<a href="https://www.bnm.gov.my/documents/20124/761691/pd_regulatorysandboxframework_Oct2016.pdf" target="_blank"><strong> Regulatory Sandbox Framework</strong> </a></li>
-                    <li>Determine if the business activity is <a href="https://amer6693.github.io/Regulations.html" target="_blank">regulated by BNM</a> and face any regulatory impediments</li>
-                  </ul></div>
-                </span>
-              </a>
-          </div>
+      <div class="container">
+      <div id="lineCont"> 
+        <div id="line"></div>
+        <div id="span">Sandbox Application Process</div>
       </div>
-
-      <div class="timeline-content-item" data-timeline="hour-9">
-          <span>Step 1: Application</span>
-          <div class="timeline-content-item-reveal">
-              <a href="#">
-                  <img src="https://picsum.photos/g/300/300">
-                  <span>
-                    <div><ul>
-                      <li>Applicant will be assessed thoroughly against the eligibility criteria and proposed safeguards for testing</li> 
-                      <li>Applicant will be informed of its eligibility within 15 working days from the submission of complete application</li>
-                    </ul></div>
-                  </span>
-              </a>
-          </div>
+      <div id="mainCont">
       </div>
-
-      <div class="timeline-content-item" data-timeline="hour-10">
-          <span>Stage 2: Preparation</span>
-          <div class="timeline-content-item-reveal">
-              <a href="#">
-                  <img src="https://picsum.photos/g/300/300">
-                  <span>
-                    <div><ul>
-                      <li>Participant will work with the Bank on the details of the testing parameters, measures to determine success or failure, exit strategy and transition plan before the commencement of the test. </li>
-                    </ul>
-                    </div>
-                  </span>
-              </a>
-          </div>
-      </div>
-
-      <div class="timeline-content-item" data-timeline="hour-11">
-          <span>Stage 3: Testing</span>
-          <div class="timeline-content-item-reveal">
-              <a href="#">
-                  <img src="https://picsum.photos/g/300/300">
-                  <span>
-                    <div><ul>
-                      <li>Participant may start testing the product, service or solution upon obtaining the Bank's approval</li>
-                      <li>Participant may be required to submit information</li>
-                      <li>Participant must submit interim reports on the progress of the test and final report at the end of the test</li>                  
-                    </ul></div>
-                  </span>
-              </a>
-          </div>
-      </div>
-
-  </div>
-</div>
+    </div>
+    <br></br>
+    <br></br>
+    <br></br>
 </section>
+
+
 
 
     
