--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <!-- saved from url=(0043)https://www.bnm.gov.my/finmkt.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style type="text/css" id="jarallax-clip-0">#jarallax-container-0 {
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<style type="text/css" id="jarallax-clip-0">#jarallax-container-0 {
            clip: rect(0 1903px 447.71875px 0);
            clip: rect(0, 1903px, 447.71875px, 0);
-        }</style></head><body data-smooth-scroll-offset="73" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0" data-new-gr-c-s-check-loaded="14.1000.0" data-gr-ext-installed="" class="loaded">
+        }
+        </style>
+        </head>
+<body data-smooth-scroll-offset="73" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0" data-new-gr-c-s-check-loaded="14.1000.0" data-gr-ext-installed="" class="loaded">
 
 
 
@@ -11,7 +15,7 @@
     <title>Regulatory Sandbox</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="BNM Regulatory Sandbox">
-<link rel="shortcut icon" href="favicon.ico">
+<link rel="shortcut icon" href="/Users/fdamer/Desktop/amer6693.github.io-1/favicon.ico">
     <link href="Important-Stuff/loader-typing.css" rel="stylesheet" type="text/css" media="all">
     <link href="Important-Stuff/theme-coworking.css" rel="stylesheet" type="text/css" media="all">
     <link href="Important-Stuff/custom.css" rel="stylesheet" type="text/css" media="all">
@@ -113,7 +117,7 @@
         <div class="row justify-content-center text-center mb-3">
           <div class="col">
             <h2 class="h2 mx-xl-6">Activity in the Sandbox</h2>
-            <p class="text-primary-2 text-small">*Updated as at 1Q2021</p>
+            <p><small class="text-muted">Updated as at 1Q2021</small></p>
           </div>
         </div>
       </div>
@@ -126,11 +130,11 @@
           </div> 
 
       
-                <div class="row justify-content-center">
+          <div class="row justify-content-center">
                   <div class="card bg-primary-alt">
                     <div class="card-body d-flex flex-column ">
                       <div class="d-flex justify-content:between">
-                      <h4>Applications by sector <p style="color: crimson;">[suggest to make this an interactive pie chart]</p></h4>
+                      <h4>Applications by sector <p style="color: crimson;">[ make this an interactive pie chart an option]</p></h4>
                       </div>
                       <div class="column" style="text-align: right;">Total</div>
                       <table class="table text-small ">
@@ -161,7 +165,7 @@
                         <td class="h5 px-1 py-0" style="text-align: right;">13</td>
                       </tr>
                       </tbody></table>
-                      <p style="text-align: right" class="text-primary-3 text-small px-1 py-0">*Cumulative number of applicants since establishment of the Regulatory Sandbox in July 2016</p>
+                      <p style="text-align: right" class="text-primary-3 text-small px-1 py-0 text-muted">*Cumulative number of applicants since establishment of the Regulatory Sandbox in July 2016</p>
                     </div>
                   </div>
                 </div>
@@ -209,7 +213,7 @@
   <div class="container">
     <div class="row justify-content-center text-center mb-2">
       <div class="col">
-        <h2 class="mx-2 mx-md-1 my-3">Resources for Sandbox Applicants</h2>
+        <h2 class="mx-2 mx-md-1 my-3">Useful Resources</h2>
       </div>
     </div>
   </div>
@@ -343,7 +347,7 @@
    
           
 <!--CAROUSELL-->
-          <div class="carousel-cell col-lg-2 col-md-3 col-sm-6 col-6 py-10">
+          <div class="carousel-cell col-lg-3 col-md-3 col-sm-6 col-6 py-10">
             <div class="card card-body d-flex flex-column">
                     <a href="#">
                       <div class="mr-2">
@@ -354,7 +358,7 @@
                     <a href="https://www.bnm.gov.my/-/regulatory-framework-for-digital-banks-update-" target ="_blank" class="hover-arrow">Read</a>
                   </div>
                 </div>
-            <div class="carousel-cell col-lg-2 col-md-3 col-sm-6 col-6 py-10">
+            <div class="carousel-cell col-lg-3 col-md-3 col-sm-6 col-6 py-10">
               <div class="card card-body d-flex flex-column">
                      <a href="#">
                         <div class="mr-2">
@@ -365,7 +369,7 @@
                           <a href="https://www.bnm.gov.my/documents/20124/948107/e-KYC+Policy+Document+300620.pdf/af752210-02e5-d2a4-e2ee-04b00c731a91?t=1594085248675" target ="_blank" class="hover-arrow">Read</a>
                         </div>
                       </div>
-                      <div class="carousel-cell col-lg-2 col-md-3 col-sm-6 col-6 py-10">
+                      <div class="carousel-cell col-lg-3 col-md-3 col-sm-6 col-6 py-10">
                         <div class="card card-body d-flex flex-column">
                                 <a href="#">
                                   <div class="mr-2">
@@ -376,7 +380,7 @@
                                 <a href="https://www.bnm.gov.my/documents/20124/943361/Merchant+Acquiring+Services+-+Exposure+Draft.pdf/4aed917a-4ad1-5cab-400b-a1e0e3996341?t=1600348844368" target ="_blank" class="hover-arrow">Read</a>
                               </div>
                             </div>
-                            <div class="carousel-cell col-lg-2 col-md-3 col-sm-6 col-6 py-10">
+                            <div class="carousel-cell col-lg-3 col-md-3 col-sm-6 col-6 py-10">
                               <div class="card card-body d-flex flex-column">
                                       <a href="#">
                                         <div class="mr-2">
