page deployment test

--- a/About.html
+++ b/About.html
@@ -83,9 +83,8 @@
      <div class="container py-0">
         <div class="row text-center justify-content-center" data-aos="fade-up">
           <div class="col">
-		   <h1 class="h1">About</h1>
-		   <p style="font-size: 18px;">As advances in financial technology have led to the introduction of new business models and solutions, the Sandbox seeks to encourage innovation and the delivery of financial services by granting regulatory flexibilities for fintech solutions with genuine value proposition to be experimented in a production or live environment.</p>
-        <p style="font-size: 18px;">Such flexibilities will be accompanied by appropriate safeguards to preserve financial stability and fair treatment to consumers.</p>
+		   <h1 class="h1">About the Regulatory Sandbox</h1>
+		   <p style="font-size: 18px;">As advances in financial technology have led to the introduction of new business models and solutions, the Sandbox seeks to encourage innovation and the delivery of financial services by granting regulatory flexibilities for fintech solutions with genuine value proposition to be experimented in a production or live environment. Such flexibilities will be accompanied by appropriate safeguards to preserve financial stability and fair treatment to consumers.</p>
           </div>
         </div>
       </div>
@@ -146,7 +145,7 @@
                                   <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8cHJvZmVzc2lvbmFsJTIwYmFja2dyb3VuZHxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80" class="card-img-top" >
 
                                   <h4><br>Application Form</h4>
-                                  <a href="/BNM_Sandbox_Application_Form.docx" download="BNM_Sandbox_Application_Form.docx" target ="_blank" class="hover-arrow">Download</a>
+                                  <a href="/BNM-Sandbox-Application-Form.docx" download="BNM-Sandbox-Application-Form.docx" target ="_blank" class="hover-arrow">Download</a>
                               </div>
                             </div>
                             <div class="carousel-cell col-lg-3 col-md-3 col-sm-6 col-6 py-10">
