--- a/Guidance.html
+++ b/Guidance.html
@@ -224,7 +224,7 @@ color: black;
       <div class="container">
         <div class="row justify-content-center text-center">
           <div class="row">
-            <h2 class="mx-5">Overview of Sandbox Application Process</h2>
+            <h2 class="mx-5">Overview of Sandbox Application Process</h2><br>
           </div>
         </div>
       </div>
@@ -405,7 +405,7 @@ color: black;
                   <h5 class="card-title">Stage 1: Application - <i>How do I apply to the Sandbox, and what response can I expect?</i></h5>
                   <p class="card-text">                  
                     <ul class="triangle">
-                    <li>Applicants should submit a completed <a href="BNM_Sandbox_Application_Form.docx" download="BNM_Sandbox_Application_Form.docx"> application form</a> with relevant supporting documentation, to <a href="mailto:fintech@bnm.gov.my">fintech@bnm.gov.my</a></li>
+                    <li>Applicants should submit a completed <a href="BNM-Sandbox-Application-Form.docx" download="BNM-Sandbox-Application-Form.docx"> application form</a> with relevant supporting documentation, to <a href="mailto:fintech@bnm.gov.my">fintech@bnm.gov.my</a></li>
                     <li>You should expect to receive an acknowledgment of your application within 1-3 working days.</li>
                     <li>Your application will be assessed against the eligibility criteria specified under section 5 of <a href="https://www.bnm.gov.my/documents/20124/761691/pd_regulatorysandboxframework_Oct2016.pdf" target="_blank">the Regulatory Sandbox Framework</a>. This would typically involve several discussions to better understand your proposed business model.</li>
                     <li>A decision on your application will be provided within 15 working days from the date at which complete information is submitted to the Bank.</li>
@@ -658,7 +658,7 @@ color: black;
                                   <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8cHJvZmVzc2lvbmFsJTIwYmFja2dyb3VuZHxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80" class="card-img-top" >
 
                                   <h4><br>Application Form</h4>
-                                  <a href="/BNM_Sandbox_Application_Form.docx" download="BNM_Sandbox_Application_Form.docx" target ="_blank" class="hover-arrow">Download</a>
+                                  <a href="/BNM-Sandbox-Application-Form.docx" download="BNM-Sandbox-Application-Form.docx" target ="_blank" class="hover-arrow">Download</a>
                               </div>
                             </div>
                             <div class="carousel-cell col-lg-3 col-md-3 col-sm-6 col-6 py-10">
