--- a/Regulations.html
+++ b/Regulations.html
@@ -172,8 +172,8 @@ translateY(-10px);
         <div class="row text-center justify-content-center" data-aos="fade-up">
           <div class="col">
 		   <h2 class="h2">General Guidance on the Bank's Regulations</h2>
-		   <p class="lead px-5 mb-4">The principal role of the Bank is to promote monetary and financial stability that is conducive to the sustainable growth of the Malaysian economy. </p>
-       <p class="lead px-5 mb-4">In doing so, the Bank is entrusted with several functions including the fostering of a sound, progressive and inclusive financial system. Accordingly, the Bank’s regulations are based on robust principles and are designed to achieve parity, proportionality and neutrality <a href="About.html#sandbox-principles" class="hover-arrow" ><i><u>(more about principles)</u></i>​</a></p>
+		   <p class="lead px-5 mb-2">The principal role of the Bank is to promote monetary and financial stability that is conducive to the sustainable growth of the Malaysian economy. </p>
+       <p class="lead px-5 mb-2">In doing so, the Bank is entrusted with several functions including the fostering of a sound, progressive and inclusive financial system. Accordingly, the Bank’s regulations are based on robust principles and are designed to achieve parity, proportionality and neutrality <a href="About.html#sandbox-principles"><i><u>(more about principles)</u></i>​</a></p>
           </div>
         </div>
       </div>
@@ -417,6 +417,7 @@ translateY(-10px);
         <div class="row justify-content-center ">
           <div class="col-12 mb-3 text-light">
             <h3 class="h3" style="text-align: center; color: black;">Legislation </h3><br>
+            <p style="color: black; justify-content: center;">The Bank is vested with comprehensive legal powers under various legislations to discharge its mandate and carry out its functions.</p>
 
             <div class="row mx-1 justify-content-center">
               <div class="col-4 col-md-4 col-lg-4" >
@@ -486,7 +487,6 @@ translateY(-10px);
 
             <div>
                 <p style="text-align: center; color: black;">For more information, about legislations click <a href="https://www.bnm.gov.my/legislation" class="hover-arrow" style="color: black;"><i><u>here</u></i></a></p>
-            <p style="text-align: center;color: black;">Updated as at 1Q2021</a></p>
           </div>
             </div>
           </div>
@@ -680,7 +680,7 @@ translateY(-10px);
                                   <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8cHJvZmVzc2lvbmFsJTIwYmFja2dyb3VuZHxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80" class="card-img-top" >
 
                                   <h4><br>Application Form</h4>
-                                  <a href="/BNM_Sandbox_Application_Form.docx" download="BNM_Sandbox_Application_Form.docx" target ="_blank" class="hover-arrow">Download</a>
+                                  <a href="/BNM-Sandbox-Application-Form.docx" download="BNM-Sandbox-Application-Form.docx" target ="_blank" class="hover-arrow">Download</a>
                               </div>
                             </div>
                             <div class="carousel-cell col-lg-3 col-md-3 col-sm-6 col-6 py-10">
