--- a/index.html
+++ b/index.html
@@ -188,19 +188,19 @@
                          <th class="px-0 py-1" scope="row">Makan Makan Sdn Bhd
                     <span class="text-primary-2"><br></br></span>
                          </th>
-                         <td class="h6 px-1 py-1">XX</td>
+                         <td class="h6 px-1 py-1">24</td>
                        </tr>
                        <tr>
                          <th class="px-0 py-1" scope="row">Tapau & Ciao Sdn Bhd 
                     <span class="text-primary-2"><br></br></span>
                          </th>
-                         <td class="h6 px-1 py-1">XX</td>
+                         <td class="h6 px-1 py-1">20</td>
                        </tr>
                        <tr>
                          <th class="px-0 py-1" scope="row">Good Durian Sdn Bhd
                     <span class="text-primary-2"><br></br></span>
                          </th>
-                         <td class="h6 px-1 py-1">XX</td>
+                         <td class="h6 px-1 py-1">12</td>
                        </tr>
                        </tbody></table>
                      </div>
