--- a/Guidance.html
+++ b/Guidance.html
@@ -48,7 +48,7 @@ dl {
 .flip-card {
   background-color: transparent;
   width: 300px;
-  height: 200px;
+  height: 190px;
   border: 1px solid #f1f1f1;
   border-radius: 25px;
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
@@ -224,7 +224,7 @@ color: black;
       <div class="container">
         <div class="row justify-content-center text-center">
           <div class="row">
-            <h2 class="mx-5">Overview of Sandbox Application Process</h2><br>
+            <h2 class="mb-3">Overview of Sandbox Application Process</h2><br>
           </div>
         </div>
       </div>
@@ -241,7 +241,6 @@ color: black;
           </div>
         </div>
       </div>
-      <span class="arrowRight">&#8594;</span>
 
 
       <div class="flip-card">
@@ -254,7 +253,6 @@ color: black;
           </div>
         </div>
       </div>
-      <span class="arrowRight">&#8594;</span>
 
 
       <div class="flip-card">
@@ -267,7 +265,6 @@ color: black;
           </div>
         </div>
       </div>
-      <span class="arrowRight">&#8594;</span>
 
 
       <div class="flip-card">
